@@ -1,3 +1,14 @@
+2008-09-10  Armin Burgmeier  <armin@arbur.net>
+
+	* cairomm/win32_font.h:
+	* cairomm/win32_font.cc: Fixed the build on Windows.
+
+	* cairomm/context.cc: Use &vec[0] instead of vec.data(), since
+	the latter seems not to be available everywhere.
+
+	* cairomm/fontface.cc: Added #ifdef CAIRO_HAS_FT_FONT around the code
+	using FtFontFace, to fix the build with disabled FreeType.
+
 2008-09-10  Jonathon Jongsma  <jjongsma@gnome.org>
 
 	* cairomm/Makefile.am:
